--- a/src/style/users.scss
+++ b/src/style/users.scss
@@ -95,9 +95,6 @@
     }
   
     select {
-      &::-ms-expand {
-        display: none;
-      }
       option {
         background: $secondary;
         color: $primary;
